# QT-GAME

./: CMakeLists.txt  CMakeLists.txt.user.a2f1020  README.md  activity.cpp  activity.h  activity.ui  confirm.cpp  confirm.h  confirm.ui  gameserver.cpp  gameserver.h  help_doc.md  main.cpp  main_menu.cpp  main_menu.h  main_menu.ui  mainwindow.cpp  mainwindow.ui  src.qrc  text_page.cpp  text_page.h  text_page.ui  thing.cpp  thing.h  thing.ui  warning_page.cpp  warning_page.h  warning_page.ui  welcome_page.cpp  welcome_page.h  welcome_page.ui  所有的交互逻辑也许？.md
src/: rule.txt
text_content/: rule.txt  文件名字说明 to 黄翟&方雨苏.docx
text_content/activity/: allactivity0.txt  allactivity1.txt  allactivity2.txt  allactivity3.txt
text_content/character/: 0.txt  0v.txt  1.txt  1v.txt  2.txt  2v.txt  3.txt  3v.txt
text_content/course/: allclass.txt
text_content/description/: 数学分析.txt
